overflow scroll applied to blockquotes - prevent screen flicker on different tab views

--- a/static/css/_tabs.scss
+++ b/static/css/_tabs.scss
@@ -15,9 +15,10 @@
 }
 
 /*blockquote in tabs*/
-.blockquote {
-    min-height: 20rem;
+blockquote {
     display: flex;
+    height: 34rem;
+    overflow: scroll;
 }
 
 
